# megakernel

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/learn/: tvm-tirx-design.md
docs/tasks/: 2026-05-26-generate-plan.md  2026-05-26-learn-tvm-tir-design.md
scripts/: build_tvm.sh  check_tvm.sh
